fix scrollbar bug

--- a/src/Components/Banner/Banner.scss
+++ b/src/Components/Banner/Banner.scss
@@ -3,5 +3,5 @@
 .banner-title {
   font-size: $h1-font-size;
   text-align: center;
-  margin: 70px 0;
+  padding-top: 70px;
 }
